<resources>
    <string name="app_name">Conquering Last Mile</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">TTN Account</string>

    <string name="pref_title_tls">Enable TLS</string>
    <string name="pref_description_tls">Enable secure connection</string>

    <string name="pref_title_data_api">Enable Data API</string>
    <string name="pref_description_data_api">Enable frame storage. Data API must be enabled on the TTN console (under integrations)</string>

    <string name="pref_title_ttn_app_id">Application ID</string>
    <string name="pref_default_ttn_app_id">Enter app id</string>

    <string name="pref_title_ttn_app_access_key">Access key</string>

    <string name="pref_title_ttn_handler">TTN handler</string>
    <string-array name="pref_ttn_handler_list_titles">
        <item>Europe</item>
        <item>West US</item>
        <item>Southeast Asia</item>
        <item>Brazil</item>
    </string-array>
    <string name="ttn_handler_default_value">eu</string>
    <string-array name="pref_example_list_values">
        <item>@string/ttn_handler_default_value</item>
        <item>us-west</item>
        <item>asia-se</item>
        <item>asia-se</item>
        <item>brazil</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="payload_hex">Payload HEX:</string>
    <string name="payload_empty_msg">Please enter payload value</string>
    <string name="device_select">Select device:</string>
    <string name="no_device_selected">Please select device</string>
    <string name="payload_send_success">Payload successfully sent</string>
    <string name="payload_send_error">Error sending payload</string>

    <string name="tls_error_title">Secure connection error</string>
    <string name="tls_error_message">An error occurred when trying to secure your connection.\nDo you want to disable secure connection.</string>
    <string name="welcome_message">Tap to get started</string>
    <string name="welcome_ttn_account_question">Do you have a TTN account?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>

    <string name="connecting_ttn">Connecting to the TTN</string>
    <string name="fetch_data">Fetching stored data</string>
    <string name="dashboard">Dashboard</string>
    <string name="devices">Devices</string>
    <string name="frames">Frames</string>
    <string name="mqtt">MQTT</string>
    <string name="send_payload">Send payload</string>
    <string name="tools">Tools</string>
    <string name="apps">Apps</string>
    <string name="arduino">Arduino</string>
    <string name="gps_tracker">GPS tracker</string>

    <string name="devices_dash_sum">Data from devices</string>
    <string name="devices_dash_sum_plural">Data from %1$d devices</string>
    <string name="frames_dash_sum">View last frames</string>
    <string name="frames_dash_sum_plural">View last %1$d frames</string>
    <string name="mqtt_dash_sum">View realtime data</string>
    <string name="send_payload_dash_sum">Send data to devices</string>
    <string name="tools_dash_sum">View status</string>
    <string name="arduino_dash_sum">View sample app</string>
    <string name="email_address">josepantoni.torres@gmail.com</string>
    <string name="email_subject">The Things Network App</string>
    <string name="email_text">I would like to know more about the app sample or the Android TTN SDK.</string>

    <string name="activations">Activations</string>
    <string name="locations">Locations</string>
    <string name="device">Device</string>
    <string name="network">Network</string>
    <string name="connection">Connection</string>
    <string name="connection_secure">Secure</string>
    <string name="connection_Insecure">Insecure</string>
    <string name="protocol">Protocol</string>
    <string name="certificates">Certificates</string>
    <string name="dev_name">Name</string>
    <string name="change_name">Change name</string>
    <string name="new_name">New name</string>
    <string name="dev_picture">Picture</string>

    <string name="data_saved">Data Saved</string>
    <string name="data_save_error">Error saving data</string>
    <string name="channel_name">ttndefaultchannel</string>
    <string name="channel_description">Default channel for TTN notifications</string>

    <string name="message_from">New message from %1$s</string>
    <string name="device_identifier">Device id:</string>
    <string name="device_eui">Device EUI:</string>
    <string name="port">Port:</string>
    <string name="counter">Counter:</string>
    <string name="payload_b64">Payload B64:</string>
    <string name="show_debug_title">Show debug data</string>
    <string name="show_debug_summary">Troubleshoot application problems</string>
    <string name="copied_clipboard">Copied to clipboard</string>
    <string name="no_frames_yet">No frames yet</string>
    <string name="description_zoom_touch_close">Expanded picture</string>
    <string name="get_picture_failed">Failed to obtain picture</string>
    <string name="save_session_dialog_title">Save session</string>
    <string name="save_session_dialog_message">Enter name for saved session:</string>
    <string name="please_enter_session_name">Please enter a session name</string>
    <string name="session_saved">Session saved</string>
    <string name="session_save_failed">Failed to save session</string>
    <string name="session_not_exist">Session does not exist</string>
    <string name="could_not_load_session">Could not load session</string>
    <string name="load_session">Load session</string>
    <string name="select_session_load">Select session to load:</string>
    <string name="session_loaded">Loaded session</string>
    <string name="session_exist_title">Session already exists</string>
    <string name="session_exist_message">Do you want to overwrite session %s? All previous data will be lost!</string>
    <string name="mail_action">MAIL</string>
    <string name="mail_chooser_type">Send Email</string>
    <string name="send_me_mail">Send me an e-mail</string>
    <string name="action_undo">UNDO</string>
    <string name="packet_deleted">Packet deleted</string>
    <string name="hi_there">Hi There!</string>
    <string name="new_slide_right">Seems that you are new here, slide right to get started</string>
    <string name="ttn_account_explanation">This the first thing you will need. A TTN account where you run your own application. If you already have one then slide to the left, if not you can <a href="https://www.thethingsnetwork.org">create one here</a>. We will wait for you</string>
    <string name="congrats">Congratulations!</string>
    <string name="app_ready">Your app is now ready to be used</string>
    <string name="ttn_settings_description">Tap the gear below to enter your application ID, access key and handler</string>

    <string name="number_of_frames">Number of frames:</string>
    <string name="overview">Overview</string>
    <string name="last_seen">Last seen:</string>
    <string name="unknown">Unknown</string>
</resources>
