<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <EditTextPreference
        android:capitalize="none"
        android:defaultValue="@string/pref_default_ttn_app_id"
        android:inputType="text"
        android:key="ttn_app_id"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_ttn_app_id" />

    <EditTextPreference
        android:capitalize="none"
        android:inputType="textPassword"
        android:key="ttn_app_access_key"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_ttn_app_access_key" />

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <ListPreference
        android:defaultValue="eu"
        android:entries="@array/pref_ttn_handler_list_titles"
        android:entryValues="@array/pref_example_list_values"
        android:key="ttn_handler"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_ttn_handler" />

</PreferenceScreen>
