<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:elevation="2dp"
    android:outlineProvider="bounds"
    android:background="@color/white"
    android:foreground="?attr/selectableItemBackground"
    android:orientation="vertical">
    <!-- Device identifier -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/device_identifier"
            android:fontFamily="@font/product_sans_bold"
            android:textAppearance="?attr/textAppearanceListItem" />

        <TextView
            android:id="@+id/dev_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:fontFamily="@font/product_sans_regular"
            android:textAppearance="?attr/textAppearanceListItem" />
    </LinearLayout>

    <!-- Device EUI -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/device_eui"
            android:fontFamily="@font/product_sans_bold"
            android:textAppearance="?attr/textAppearanceListItem" />

        <TextView
            android:id="@+id/dev_eui"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:fontFamily="@font/product_sans_regular"
            android:textAppearance="?attr/textAppearanceListItem" />
    </LinearLayout>

    <!-- port -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/port"
            android:fontFamily="@font/product_sans_bold"
            android:textAppearance="?attr/textAppearanceListItem" />

        <TextView
            android:id="@+id/port"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:fontFamily="@font/product_sans_regular"
            android:textAppearance="?attr/textAppearanceListItem" />
    </LinearLayout>

    <!-- counter -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/counter"
            android:fontFamily="@font/product_sans_bold"
            android:textAppearance="?attr/textAppearanceListItem" />

        <TextView
            android:id="@+id/counter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:fontFamily="@font/product_sans_regular"
            android:textAppearance="?attr/textAppearanceListItem" />
    </LinearLayout>

    <!-- payload -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/payload"
            android:fontFamily="@font/product_sans_bold"
            android:textAppearance="?attr/textAppearanceListItem" />

        <TextView
            android:id="@+id/payload"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:fontFamily="@font/product_sans_regular"
            android:textAppearance="?attr/textAppearanceListItem" />
    </LinearLayout>
</LinearLayout>
